kustomize/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: quay.io/wpernath/simple-quarkus:latest
        imagePullPolicy: Always
        name: simple
        ports:
          - containerPort: 8080
            protocol: TCP
