kustomize/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple
spec:
  host: simple-article-kustomize.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dev-simple
    weight: 100
  wildcardPolicy: None
